fix: missed jjwt-jackson dependency added